--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": 2,
-    "builds" : [{"src" : "app.js", "use" : "vercel-node" }],
+    "version": 3,
+    "builds" : [{"src" : "./index.js", "use" : "@vercel-node" }],
     "routes" : [{"src" : "/(.*)", "dest" : "/" }]
 }
