--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "webmessage",
+  "name": "server",
   "version": "1.0.0",
-  "description": "for hackathon",
-  "main": "app.js",
-  "type": "commonjs",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
