--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": 3,
-    "builds" : [{"src" : "./index.js", "use" : "@vercel-node" }],
+    "version": 1,
+    "builds" : [{"src" : "./index.js", "use": "express"}],
     "routes" : [{"src" : "/(.*)", "dest" : "/" }]
 }
